{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 147,
  "lineage": "09845d5d-8e8b-fa0b-0a7d-046bbd18eec5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-00c2372fcd4affc16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/19",
            "default_for_az": false,
            "id": "subnet-00c2372fcd4affc16",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "state": "available",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2a",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-0378c513ff99e7a73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.160.0/19",
            "default_for_az": false,
            "id": "subnet-0378c513ff99e7a73",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "state": "available",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2b",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-06d1f9a7b280a3315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.192.0/19",
            "default_for_az": false,
            "id": "subnet-06d1f9a7b280a3315",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "state": "available",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2c",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-0b5919eeffef3f6b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "id": "subnet-0b5919eeffef3f6b8",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "state": "available",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-public-us-east-2a",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-09ff138f5e183525e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "id": "subnet-09ff138f5e183525e",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "state": "available",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-public-us-east-2b",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-01142467cf48612ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "id": "subnet-01142467cf48612ae",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "state": "available",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-public-us-east-2c",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:vpc/vpc-0941087e8a1c333d0",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c9cf1fd90972af57",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09011184b0889c007",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0941087e8a1c333d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-090af33d93429d9b7",
            "owner_id": "551178754270",
            "state": "available",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-vpc",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cda3b036de8c9789",
            "public_dns": "ec2-3-128-21-97.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.21.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-eip-us-east-2a",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0745a3bd9db69a481",
            "public_dns": "ec2-3-131-183-212.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.183.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-eip-us-east-2b",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-076448338025f7709",
            "public_dns": "ec2-18-190-81-125.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.81.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-eip-us-east-2c",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba8d5168e13bbcce",
            "arn": "arn:aws:ec2:us-east-2:551178754270:instance/i-09969e585ae0c0ee0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "att-demo-ocp-labs-nks5v-master-profile",
            "id": "i-09969e585ae0c0ee0",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0533356ac9d2b2e06"
              }
            ],
            "primary_network_interface_id": "eni-0533356ac9d2b2e06",
            "private_dns": "ip-10-0-155-56.us-east-2.compute.internal",
            "private_ip": "10.0.155.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-2:551178754270:key/7726d125-0b0e-468d-93bb-4a7198f105b6",
                "volume_id": "vol-04d9285d8b4701239",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c2372fcd4affc16",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-0",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-0-vol",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_security_group_ids": [
              "sg-0bfab1ff7f778d2f0"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba8d5168e13bbcce",
            "arn": "arn:aws:ec2:us-east-2:551178754270:instance/i-04b2c0af5ff171f71",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "att-demo-ocp-labs-nks5v-master-profile",
            "id": "i-04b2c0af5ff171f71",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a31c9add9456e012"
              }
            ],
            "primary_network_interface_id": "eni-0a31c9add9456e012",
            "private_dns": "ip-10-0-181-241.us-east-2.compute.internal",
            "private_ip": "10.0.181.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-2:551178754270:key/7726d125-0b0e-468d-93bb-4a7198f105b6",
                "volume_id": "vol-055a0cc3be61b4c53",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0378c513ff99e7a73",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-1",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-1-vol",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_security_group_ids": [
              "sg-0bfab1ff7f778d2f0"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba8d5168e13bbcce",
            "arn": "arn:aws:ec2:us-east-2:551178754270:instance/i-0edcfc60f507aa7be",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "att-demo-ocp-labs-nks5v-master-profile",
            "id": "i-0edcfc60f507aa7be",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0111dec3731bd9b29"
              }
            ],
            "primary_network_interface_id": "eni-0111dec3731bd9b29",
            "private_dns": "ip-10-0-193-49.us-east-2.compute.internal",
            "private_ip": "10.0.193.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 360,
                "kms_key_id": "arn:aws:kms:us-east-2:551178754270:key/7726d125-0b0e-468d-93bb-4a7198f105b6",
                "volume_id": "vol-0ec8f1c7c7c23db38",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d1f9a7b280a3315",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-2",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-2-vol",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_security_group_ids": [
              "sg-0bfab1ff7f778d2f0"
            ]
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:internet-gateway/igw-028cb5a331460519a",
            "id": "igw-028cb5a331460519a",
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-igw",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:loadbalancer/net/att-demo-ocp-labs-nks5v-ext/8770d86f67ee0b8c",
            "arn_suffix": "net/att-demo-ocp-labs-nks5v-ext/8770d86f67ee0b8c",
            "dns_name": "att-demo-ocp-labs-nks5v-ext-8770d86f67ee0b8c.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:loadbalancer/net/att-demo-ocp-labs-nks5v-ext/8770d86f67ee0b8c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "att-demo-ocp-labs-nks5v-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01142467cf48612ae"
              },
              {
                "subnet_id": "subnet-09ff138f5e183525e"
              },
              {
                "subnet_id": "subnet-0b5919eeffef3f6b8"
              }
            ],
            "subnets": [
              "subnet-01142467cf48612ae",
              "subnet-09ff138f5e183525e",
              "subnet-0b5919eeffef3f6b8"
            ],
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-ext",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0941087e8a1c333d0",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:loadbalancer/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e",
            "arn_suffix": "net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e",
            "dns_name": "att-demo-ocp-labs-nks5v-int-ef1daba6fe29121e.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:loadbalancer/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "att-demo-ocp-labs-nks5v-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c2372fcd4affc16"
              },
              {
                "subnet_id": "subnet-0378c513ff99e7a73"
              },
              {
                "subnet_id": "subnet-06d1f9a7b280a3315"
              }
            ],
            "subnets": [
              "subnet-00c2372fcd4affc16",
              "subnet-0378c513ff99e7a73",
              "subnet-06d1f9a7b280a3315"
            ],
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-int",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0941087e8a1c333d0",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:listener/net/att-demo-ocp-labs-nks5v-ext/8770d86f67ee0b8c/9f2bd1e4fb5a4331",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:listener/net/att-demo-ocp-labs-nks5v-ext/8770d86f67ee0b8c/9f2bd1e4fb5a4331",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:loadbalancer/net/att-demo-ocp-labs-nks5v-ext/8770d86f67ee0b8c",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:listener/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e/b725f4e2e4b37c43",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:listener/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e/b725f4e2e4b37c43",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:loadbalancer/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:listener/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e/ac5936efa0a88867",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:listener/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e/ac5936efa0a88867",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:loadbalancer/net/att-demo-ocp-labs-nks5v-int/ef1daba6fe29121e",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c",
            "arn_suffix": "targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c",
            "lambda_multi_value_headers_enabled": false,
            "name": "att-demo-ocp-labs-nks5v-aext",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-aext",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d",
            "arn_suffix": "targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d",
            "lambda_multi_value_headers_enabled": false,
            "name": "att-demo-ocp-labs-nks5v-aint",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-aint",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7",
            "arn_suffix": "targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7",
            "lambda_multi_value_headers_enabled": false,
            "name": "att-demo-ocp-labs-nks5v-sint",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-sint",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d-20200925135943135000000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d",
            "target_id": "10.0.155.56"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7-2020092513594321300000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7",
            "target_id": "10.0.155.56"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c-20200925135943139900000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c",
            "target_id": "10.0.155.56"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d-2020092513594319370000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d",
            "target_id": "10.0.181.241"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7-2020092513594346250000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7",
            "target_id": "10.0.181.241"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c-2020092513594344210000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c",
            "target_id": "10.0.181.241"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d-2020092513594347570000000f",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aint/b35eef4e0796634d",
            "target_id": "10.0.193.49"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7-2020092513594314710000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-sint/35ec9092bdd5ebd7",
            "target_id": "10.0.193.49"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c-20200925135943490600000010",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:551178754270:targetgroup/att-demo-ocp-labs-nks5v-aext/3f421fdb2126f98c",
            "target_id": "10.0.193.49"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fddd1e367aa2adde",
            "original_route_table_id": "rtb-0dceb0b499d04dc9e",
            "route_table_id": "rtb-090af33d93429d9b7",
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cda3b036de8c9789",
            "id": "nat-00dcc540b6c6b7078",
            "network_interface_id": "eni-01d5a393fe1b9640e",
            "private_ip": "10.0.20.225",
            "public_ip": "3.128.21.97",
            "subnet_id": "subnet-0b5919eeffef3f6b8",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-nat-us-east-2a",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0745a3bd9db69a481",
            "id": "nat-03d301203e2dc9a70",
            "network_interface_id": "eni-0b6ef16c223255043",
            "private_ip": "10.0.43.145",
            "public_ip": "3.131.183.212",
            "subnet_id": "subnet-09ff138f5e183525e",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-nat-us-east-2b",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076448338025f7709",
            "id": "nat-010bf669572a70683",
            "network_interface_id": "eni-054694196a03e4131",
            "private_ip": "10.0.70.211",
            "public_ip": "18.190.81.125",
            "subnet_id": "subnet-01142467cf48612ae",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-nat-us-east-2c",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0533356ac9d2b2e06",
            "mac_address": "02:c6:ea:14:af:32",
            "private_dns_name": "ip-10-0-155-56.us-east-2.compute.internal",
            "private_ip": "10.0.155.56",
            "private_ips": [
              "10.0.155.56"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bfab1ff7f778d2f0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c2372fcd4affc16",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-0",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0a31c9add9456e012",
            "mac_address": "06:a0:6c:cb:f9:68",
            "private_dns_name": "ip-10-0-181-241.us-east-2.compute.internal",
            "private_ip": "10.0.181.241",
            "private_ips": [
              "10.0.181.241"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bfab1ff7f778d2f0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0378c513ff99e7a73",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-1",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "eni-0111dec3731bd9b29",
            "mac_address": "0a:10:b9:a7:bd:88",
            "private_dns_name": "ip-10-0-193-49.us-east-2.compute.internal",
            "private_ip": "10.0.193.49",
            "private_ips": [
              "10.0.193.49"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bfab1ff7f778d2f0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d1f9a7b280a3315",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-2",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028cb5a331460519a",
            "id": "r-rtb-090af33d93429d9b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090af33d93429d9b7",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07ef6fb75ac55ce891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-00dcc540b6c6b7078",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ef6fb75ac55ce89",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00e03fc0c752a600f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03d301203e2dc9a70",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00e03fc0c752a600f",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02a63916ca2466c091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-010bf669572a70683",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a63916ca2466c09",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-090af33d93429d9b7",
            "owner_id": "551178754270",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-public",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07ef6fb75ac55ce89",
            "owner_id": "551178754270",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2a",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00e03fc0c752a600f",
            "owner_id": "551178754270",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2b",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02a63916ca2466c09",
            "owner_id": "551178754270",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2c",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074d42f42a8d30e06",
            "route_table_id": "rtb-07ef6fb75ac55ce89",
            "subnet_id": "subnet-00c2372fcd4affc16"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00363ceb88eee25ee",
            "route_table_id": "rtb-00e03fc0c752a600f",
            "subnet_id": "subnet-0378c513ff99e7a73"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bad8c167510a5de1",
            "route_table_id": "rtb-02a63916ca2466c09",
            "subnet_id": "subnet-06d1f9a7b280a3315"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e8c2e2f4d6370b3",
            "route_table_id": "rtb-090af33d93429d9b7",
            "subnet_id": "subnet-0b5919eeffef3f6b8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f584421db522d81b",
            "route_table_id": "rtb-090af33d93429d9b7",
            "subnet_id": "subnet-09ff138f5e183525e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0989e7abfba59cfe1",
            "route_table_id": "rtb-090af33d93429d9b7",
            "subnet_id": "subnet-01142467cf48612ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:security-group/sg-0bfab1ff7f778d2f0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfab1ff7f778d2f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22623,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22623
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 6081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 6642
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-07dfc60c5695a4671"
                ],
                "self": true,
                "to_port": 9999
              }
            ],
            "name": "terraform-20200925135911597300000003",
            "name_prefix": null,
            "owner_id": "551178754270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-master-sg",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:security-group/sg-07dfc60c5695a4671",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07dfc60c5695a4671",
            "ingress": [],
            "name": "terraform-20200925135911583600000002",
            "name_prefix": null,
            "owner_id": "551178754270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-worker-sg",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2916879684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-1950906367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2112088113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2678571085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-178558510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-2936606076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2238988647",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1731225883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3278883572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-556524168",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-1358557928",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-2998786708",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 10257,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-2423625323",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-1915862551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 10259,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-3708240777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-1061383157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-1032771256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-3754622660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 6642,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1055524352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3702402684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2595595759",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2029096339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4279971638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-4046166281",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-326087029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": "sg-07dfc60c5695a4671",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22623,
            "id": "sgrule-3423449174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bfab1ff7f778d2f0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3013520642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2080547403",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-2655423031",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": "sg-0bfab1ff7f778d2f0",
            "to_port": 6081,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-2458836961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2224360221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1724982113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": "sg-0bfab1ff7f778d2f0",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3264118926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": "sg-0bfab1ff7f778d2f0",
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-550152434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-3399823266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-685836254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": "sg-0bfab1ff7f778d2f0",
            "to_port": 10250,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-692611627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3406578263",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": "sg-0bfab1ff7f778d2f0",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2367146436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1867768248",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": "sg-0bfab1ff7f778d2f0",
            "to_port": 32767,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3561158718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-4039824243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-311360271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07dfc60c5695a4671",
            "self": false,
            "source_security_group_id": "sg-0bfab1ff7f778d2f0",
            "to_port": 4789,
            "type": "ingress"
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-00c2372fcd4affc16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-00c2372fcd4affc16",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2a",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-0378c513ff99e7a73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.160.0/19",
            "id": "subnet-0378c513ff99e7a73",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2b",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-06d1f9a7b280a3315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.192.0/19",
            "id": "subnet-06d1f9a7b280a3315",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-private-us-east-2c",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-0b5919eeffef3f6b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0b5919eeffef3f6b8",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-public-us-east-2a",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-09ff138f5e183525e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-09ff138f5e183525e",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-public-us-east-2b",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:subnet/subnet-01142467cf48612ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-01142467cf48612ae",
            "map_public_ip_on_launch": false,
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-public-us-east-2c",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:551178754270:vpc/vpc-0941087e8a1c333d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0506c7705a313da7e",
            "default_route_table_id": "rtb-090af33d93429d9b7",
            "default_security_group_id": "sg-093df3226e7724744",
            "dhcp_options_id": "dopt-09011184b0889c007",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0941087e8a1c333d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-090af33d93429d9b7",
            "owner_id": "551178754270",
            "tags": {
              "Name": "att-demo-ocp-labs-nks5v-vpc",
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.219.80.0/20",
              "3.5.128.0/22",
              "3.5.132.0/23",
              "52.219.96.0/20"
            ],
            "id": "vpce-00c86772d7d8e2fab",
            "owner_id": "551178754270",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00e03fc0c752a600f",
              "rtb-02a63916ca2466c09",
              "rtb-07ef6fb75ac55ce89",
              "rtb-090af33d93429d9b7"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/att-demo-ocp-labs-nks5v": "owned"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0941087e8a1c333d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_vpc.new_vpc"
          ]
        }
      ]
    }
  ]
}